--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -4,22 +4,118 @@ output:
   html_document:
     keep_md: true
 ---
-
-
+## Environment Setup
+```{r}
+echo = TRUE  # so that someone else will be able to read the code
+library(ggplot2)
+library(scales)
+```
 ## Loading and preprocessing the data
-
-
-
+#### 1.Load the data (i.e. read.csv())
+```{r}
+if(!file.exists('activity.csv')){
+unzip('repdata_data_activity.zip')
+}
+readActivityData <- read.csv('activity.csv')
+```
+#### 2.Process/transform the data (if necessary) into a format suitable for your analysis
+```{r}
+# remove incomplete cases
+activityDataNoNA <- na.omit(readActivityData)
+```
 ## What is mean total number of steps taken per day?
+#### 1.Calculate the total number of steps taken per day
+```{r}
+ttlSteps <- tapply(activityDataNoNA$steps, list(Date = activityDataNoNA$date), sum, na.rm=TRUE)
+ttlSteps
+```
+#### 2.Make a histogram of the total number of steps taken each day
+```{r}
+qplot(ttlSteps, xlab='Total steps per day', ylab='Frequency', binwidth=500)
+ttlSteps
+```
 
+#### 3.Calculate and report the mean and median of the total number of steps taken per day
 
+```{r}
+Steps <- aggregate(readActivityData$steps, list(readActivityData$date), sum)
+Steps
+meanSteps <- mean(Steps$x, na.rm = TRUE)
+meanSteps
+```
+```{r}
+medianSteps <- median(Steps$x, na.rm = TRUE)
+medianSteps
+```
 
 ## What is the average daily activity pattern?
+#### 1.Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+```{r}
+avgSteps <- aggregate(activityDataNoNA$steps, list(interval = as.numeric(as.character(activityDataNoNA$interval))), FUN = "mean")
+names(avgSteps)[2] <- "meanOfSteps"
 
+ggplot(avgSteps, aes(interval, meanOfSteps)) + geom_line(color = "steelblue", size = 0.8) + labs(title = "Time Series Plot of the 5-minute Interval", x = "5-minute intervals", y = "Average Number of Steps")
+```
 
-
+#### 2.Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+```{r}
+avgSteps[avgSteps$meanOfSteps == max(avgSteps$meanOfSteps), ]
+```
 ## Imputing missing values
+#### Note that there are a number of days/intervals where there are missing values (coded as NA). The presence of missing days may introduce bias into some calculations or summaries of the data.
+#### 1.Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+```{r}
+sum(is.na(readActivityData))
+```
+#### 2.Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc
+#### 3.Create a new dataset that is equal to the original dataset but with the missing data filled in
+```{r}
+stepValues <- data.frame(readActivityData$steps)
+stepValues[is.na(stepValues),] <- ceiling(tapply(X=readActivityData$steps,INDEX=readActivityData$interval,FUN=mean,na.rm=TRUE))
+activityDataImputed <- cbind(stepValues, readActivityData[,2:3])
+colnames(activityDataImputed) <- c("steps", "date", "interval")
+```
+#### 4.Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+##### Make a histogram of the total number of steps taken each day
+```{r}
+newDailyStepSum <- tapply(activityDataImputed$steps, activityDataImputed$date, sum)
+qplot(newDailyStepSum, xlab='Imouted Total steps by day', ylab='Frequency', binwidth=500)
+```
 
+##### Calculate and report the mean total number of steps taken per day
+```{r}
+newTtlSteps <- tapply(activityDataImputed$steps, list(Date = activityDataImputed$date), sum)
+newMean <- mean(newTtlSteps)
+newMean
+```
 
+##### Calculate and report the median total number of steps taken per day
+```{r}
+newMedian <- median(newTtlSteps)
+newMedian
+```
 
+##### Do these values differ from the estimates from the first part of the assignment
+```{r}
+oldMean <- meanSteps
+oldMedian <- medianSteps
+newMean - oldMean
+newMedian - oldMedian
+```
 ## Are there differences in activity patterns between weekdays and weekends?
+#### For this part the weekdays() function may be of some help here. Use the dataset with the filled-in missing values for this part.
+#### 1.Create a new factor variable in the dataset with two levels weekdays and weekends indicating whether a given date is a weekday or weekend day
+```{r}
+activityDataImputed$dateType <-  ifelse(as.POSIXlt(activityDataImputed$date)$wday %in% c(0,6), 'weekend', 'weekday')
+```
+
+##### 2.Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis).
+
+```{r}
+averagedActivityDataImputed <- aggregate(steps ~ interval + dateType, data=activityDataImputed, mean)
+ggplot(averagedActivityDataImputed, aes(interval, steps)) + 
+    geom_line() + 
+    facet_grid(dateType ~ .) +
+    xlab("5-minute interval") + 
+    ylab("Average Steps")
+```
