--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -104,7 +104,7 @@ newMedian - oldMedian
 ```
 ## Are there differences in activity patterns between weekdays and weekends?
 #### For this part the weekdays() function may be of some help here. Use the dataset with the filled-in missing values for this part.
-#### 1.Create a new factor variable in the dataset with two levels weekdays and weekends¬ù indicating whether a given date is a weekday or weekend day
+#### 1.Create a new factor variable in the dataset with two levels weekdays and weekendsù indicating whether a given date is a weekday or weekend day
 ```{r}
 activityDataImputed$dateType <-  ifelse(as.POSIXlt(activityDataImputed$date)$wday %in% c(0,6), 'weekend', 'weekday')
 ```
